[tool.poetry]
name = "lennard-jones-fluids"
version = "0.1.0"
description = "Montecarlo simulation of Lennard-Jones Fluids"
authors = ["BridLeiva <yk50tcj5@duck.com>"]
license = "AGPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]